# lakmus-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CASE_STUDY.md  DATA_MODEL.md  SHARING.md  WORKFLOW.md
examples/: sample_trial_records.jsonl
src/agent_behavior_control/: __init__.py  cli.py  metrics.py  schema.py  summarize.py
